# GCA-1

./: .gitignore  README.md  pyproject.toml  setup.sh  temp.sh
Extract triples/: extract_triples.py  process_dataset.py  standardize_diahalu.py
Extract triples/dataset/: DiaHalu_V2.json
Extract triples/processed/: graphs_diahalu.json  graphs_phd.json  out_triplets_diahalu.json  out_triplets_phd.json  out_triplets_wiki.json  scored_diahalu.json  scored_phd.json
Graph-based Contextual Consistency Comparison/: extract_nodes&edges.py  rgcn_gca_encoder.py  score_with_rgcn.py
PHD/RV/: detection_components.py
PHD/scemantic_entropy/: utils.py
PHD/selfcheckgpt-nli/: sample_PHD.py
Reverse Verification of Triples/: mask_relationship.py
Reverse Verification of Triples/compare triples/: fact_triples.py  gpt4_compare.py  sample.py
Temporal Graph/: analyze_types.py  build_temporal_graphs.py  build_temporal_graphs_without_entity_edge.py  build_temporal_graphs_without_temp_edge.py  build_temporal_graphs_zero_entity_emb.py  build_temporal_graphs_zero_temp_emb.py  extract_entities_per_dialogue.py  find_errors.py  graph_stats.py  infer_temporal.py  model_temporal_gnn.py  plot_confusion_matrix.py  train_temporal.py
Temporal Graph/processed/: diahalu_temporal.json
rgcn_training/: gca_rgcn.py  prepare_dgl_graphs.py  train_gca_rgcn.py
wikiBio/: cal_metric.py  cal_metric_gca.py
