[project]
name = "gca"
version = "0.1.0"
description = "Graph-based Contextual Consistency Comparison for Hallucination Detection"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "google-generativeai>=0.8.0",
    "numpy>=2.3.4",
    "tqdm>=4.67.1",
    "torch>=2.4,<2.5",
    "torchvision>=0.19,<0.20",
    "torchdata>=0.11.0",
    "torchmetrics>=1.8.2",
    "transformers>=4.30.0",
    "dgl>=2.4",
    "sentence-transformers>=2.2.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "rdflib>=7.4.0",
    "matplotlib>=3.10.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
find-links = ["https://data.dgl.ai/wheels/torch-2.4/cu124/repo.html"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.black]
line-length = 120
target-version = ['py312']
